fixed responsiveness of youtube videos as they would not shrink to fit on mobile screen size, completed for members,member1,2,3 - only have members4 left

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,7 @@ form.login {
 .saveplaylist {
   margin-bottom: 22px;
 }
-.btn-default{
+/* .btn-default{
   width: 560px;
   padding: 10px;
-}
+} */
